--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                  <div class="row">
                     <div class="col-1-of-4">
                       <div  class="features-box">
-                        <img src="../natour/img/basic_world.png" alt="#" class="features-box_icon basic-world "/>
+                        <img src="./img/basic_world.png" alt="#" class="features-box_icon basic-world "/>
                         <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
                         <p class="features-box_text">
                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -111,7 +111,7 @@
                     
                   <div class="col-1-of-4">
                         <div  class="features-box">
-                          <img src="../natour/img/basic_compass.png" alt="#" class="features-box_icon basic-world "/>
+                          <img src="./img/basic_compass.png" alt="#" class="features-box_icon basic-world "/>
                           <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
                           <p class="features-box_text">
                              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -121,7 +121,7 @@
                       </div>
                      <div class="col-1-of-4">
                         <div  class="features-box">
-                          <img src="../natour/img/basic_map.png" alt="#" class="features-box_icon basic-world "/>
+                          <img src="./img/basic_map.png" alt="#" class="features-box_icon basic-world "/>
                           <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
                           <p class="features-box_text">
                              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -131,7 +131,7 @@
                       </div>
                       <div class="col-1-of-4">
                         <div  class="features-box">
-                          <img src="../natour/img/basic_heart.png" alt="#" class="features-box_icon basic-world "/>
+                          <img src="./img/basic_heart.png" alt="#" class="features-box_icon basic-world "/>
                           <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
                           <p class="features-box_text">
                              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
