--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <div class="row">
                         <div class="story">
                             <figure class="story_shape">
-                               <img src="../natour/img/nat-8 (1).jpg" alt="person on a tour " class="story_img"/>
+                               <img src="./img/nat-8 (1).jpg" alt="person on a tour " class="story_img"/>
                                <figcaption class="story_caption">Mary Smith</figcaption>
                             </figure>
                             <div class="story_text">
@@ -299,7 +299,7 @@
                     <div class="row">
                         <div class="story">
                             <figure class="story_shape">
-                               <img src="../natour/img/nat-9 (1).jpg" alt="person on a tour " class="story_img"/>
+                               <img src="./img/nat-9 (1).jpg" alt="person on a tour " class="story_img"/>
                                <figcaption class="story_caption">Jack Wilson</figcaption>
                             </figure>
                             <div class="story_text">
